# spootfeed

./: Cargo.toml
crates/feeder/: Cargo.toml
crates/spot-db/: Cargo.toml
crates/spot-db/src/: config.rs  lib.rs
src/: main.rs
