[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
rust-version = "1.91.1"
edition = "2024"
repository = "https://github.com/alfredj-stanly/spotfeed"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }

anyhow = "1.0.100"
dotenvy = "0.15.7"
tracing = "0.1.43"

# Internal crates
proto = { path = "crates/proto" }
spot-db = { path = "crates/spot-db" }
