[package]
name = "feeder"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
proto.workspace = true

anyhow.workspace = true

dotenvy.workspace = true

axum = { version = "0.8.7", features = ["ws"] }
tokio.workspace = true

tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["trace", "cors"] }

tracing.workspace = true
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
